[songho] lam tinh nang nhap gia tri
